15. qmail.c: use perm_error/temp_error from qmail.h to evaluate perm/temp
    error
- 11/02/2022
16. dknewkey.sh: generate ed25519 public key without ASN.1 structure (skip
    first 12 bytes)
- 12/02/2022
17. qmail-dkim.c: replaced exit code 70 with QQ_PID_FILE
18. cdbget.c: added -n option for searching cdb created by cdb-database
19. qmail-newu.c, cdb-database.c: refactored code

* Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
======= Release Highlights ================================================
o SRS decoding in qmail-smtpd avoiding the need to create virtualdomain for
  srs and .qmail-srs-default in /var/indimail/alias
o qmail-remote can use credentials stored in remote_auth.cdb using simple or
  wildcard assignments
o qmail-smtpd: display auth method used in logs when SECURE_AUTH is set
o sys-checkpwd.c: display auth method in logs if DEBUG is set
o qmail-dkim: recursively replace all '%' characters with domain
o qmail.c, qmail.h: use exit code defines from qmail.h
o qmulti.c, qmail-spamfilter.c, qmail-queue.c, qmail-qfilter.c,
  qmail-multi.c, qmail-dkim.c, qmail-dk.c, mailfilter.c: use exit code
  defines from qmail.h
o moved tls functions to libqmail. Use common tls functions in smtpd.c,
  qmail-remote.c from libqmail
o modified log functions to use varargs
o use subprintf (printf like function that can print to substdio).
o smtpd.c: added ssl cipher bits in Received header
o conf-cc Added flags to warn issues with variadic functions
o qmail-dkim: sign and verify ed25519 DKIM-Signature
o qmail-dkim.c: added DKIMSIGNEXTRA, DKIMSIGNOPTIONSEXTRA env variables to
    insert additional signature
===========================================================================
- 08/09/2022
01.  First change
02.  maildir_deliver.c: added comments
- 18/09/2022
03.  instcheck.in: use uininstaller only for ucspi-tcp
04.  INPUT, ETC: renamed DIR to DIRS
- 19/09/2022